Commit about User List feature

--- a/src/test/resources/data_userList.properties
+++ b/src/test/resources/data_userList.properties
@@ -1,3 +1,14 @@
 #------------Input search----------------
 exited_name=Tran Thi Minh Thuy
-exited_partial_name=Thi Minh
+exited_partial_name=Nam
+exited_email=tran.thi.minh.thuy@framgia.com.edev
+exited_partial_email=tran.thi
+exited_code=B120617
+exited_partial_code=B120
+female_gender=Female
+male_gender=Male
+exited_position=QA
+exited_partial_position=Leader
+special_characters=!@#$%^&*
+not_edit_data=blablabla
+no_result_matching=No matching records found
