--- a/src/test/resources/data_userList.properties
+++ b/src/test/resources/data_userList.properties
@@ -1,12 +1,16 @@
 #------------Input search----------------
+exited_no=878
+exited_partial_no=57
 exited_name=Tran Thi Minh Thuy
-exited_partial_name=Nam
+exited_partial_name=Thuy
 exited_email=tran.thi.minh.thuy@framgia.com.edev
 exited_partial_email=tran.thi
 exited_code=B120617
 exited_partial_code=B120
 female_gender=Female
 male_gender=Male
+exited_phone=012345678
+exited_partial_phone=090
 exited_position=QA
 exited_partial_position=Leader
 special_characters=!@#$%^&*
