Objective_QuickActions_Delete

--- a/src/test/resources/dataObjective_QuickActions.properties
+++ b/src/test/resources/dataObjective_QuickActions.properties
@@ -11,3 +11,7 @@ OBJ_WEIGHT_TITLE = Update weight
 OBJ_WEIGHT_WEIGHT = Weight
 OBJ_WEIGHT_MSG_ERROR_MINMAX = Weight must greater than or equal 1 and less than or equal 5
 OBJ_WEIGHT_MSG_ERROR_DIGIT = Weight must be digit
+
+#------------Delete popup----------------
+OBJ_DELETE_MSG_CONFIRM = Are you sure you want to delete 
+
