--- a/src/test/resources/dataObjective_QuickActions.properties
+++ b/src/test/resources/dataObjective_QuickActions.properties
@@ -1,13 +1,14 @@
-msgSuccess = Update successful
-msgError_UpdateObjectiveTitle = Objective name already exists
+OBJ_UPDATE_MSG_SUCCESS = Update successful
+OBJ_UPDATE_MSG_ERROR_EXISTED_NAME = Objective name already exists
 
 #------------Update Objective title popup----------------
-popupUpdateObjectiveTitle_lblTitle = Update Objective title
-popupUpdateObjectiveTitle_lblName = Name
-symAsterisk = *
+OBJ_NAME_lblTITLE = Update Objective title
+OBJ_NAME_lblNAME = Name
+OBJ_NAME_sybASTERISK = *
 
 #------------Update weight popup----------------
-popupUpdateWeight_lblTitle = Update weight
-popupUpdateWeight_lblWeight = Weight
-popupUpdateWeight_msgError_MinMax = Weight must greater than or equal 1 and less than or equal 5
-popupUpdateWeight_msgError_Digit = Weight must be digit
+OBJ_WEIGHT_lblTITLE = Update weight
+OBJ_WEIGHT_lblWEIGHT = Weight
+OBJ_WEIGHT_MSG_ERROR_MINMAX = Weight must greater than or equal 1 and less than or equal 5
+OBJ_WEIGHT_MSG_ERROR_DIGIT = Weight must be digit
+
