Objective_QuickActions_fixcmt_3rd

--- a/src/test/resources/dataObjective_QuickActions.properties
+++ b/src/test/resources/dataObjective_QuickActions.properties
@@ -2,13 +2,13 @@ OBJ_UPDATE_MSG_SUCCESS = Update successful
 OBJ_UPDATE_MSG_ERROR_EXISTED_NAME = Objective name already exists
 
 #------------Update Objective title popup----------------
-OBJ_NAME_lblTITLE = Update Objective title
-OBJ_NAME_lblNAME = Name
-OBJ_NAME_sybASTERISK = *
+OBJ_NAME_TITLE = Update Objective title
+OBJ_NAME_NAME = Name
+OBJ_ASTERISK = *
 
 #------------Update weight popup----------------
-OBJ_WEIGHT_lblTITLE = Update weight
-OBJ_WEIGHT_lblWEIGHT = Weight
+OBJ_WEIGHT_TITLE = Update weight
+OBJ_WEIGHT_WEIGHT = Weight
 OBJ_WEIGHT_MSG_ERROR_MINMAX = Weight must greater than or equal 1 and less than or equal 5
 OBJ_WEIGHT_MSG_ERROR_DIGIT = Weight must be digit
 
