Objective_QuickActions_LinkObjectives (#21)
* Objective_QuickActions_LinkObjectives

* Objective_QuickActions_LinkObjectives_fixcmt

--- a/src/test/resources/dataObjective_QuickActions.properties
+++ b/src/test/resources/dataObjective_QuickActions.properties
@@ -15,3 +15,18 @@ OBJ_WEIGHT_MSG_ERROR_DIGIT = Weight must be digit
 #------------Delete popup----------------
 OBJ_DELETE_MSG_CONFIRM = Are you sure you want to delete 
 
+#------------Link to Key Result popup----------------
+OBJ_LINKOBJ_SEARCH_GROUP_NOT_EXIST = 12qwaszx
+OBJ_LINKOBJ_SEARCH_GROUP_EXISTED = lander
+OBJ_LINKOBJ_GROUP_NOTHING_SELECTED = Nothing selected
+OBJ_LINKOBJ_NO_CHOICE_GROUP = Please select a group!
+OBJ_LINKOBJ_GROUP_HAS_OBJ = Section 1
+OBJ_LINKOBJ_GROUP_HAS_NO_OBJ = Test 2
+
+OBJ_LINKOBJ_NO_OBJ_IN_GROUP = There are no Objective to choose
+OBJ_LINKOBJ_NO_CHOICE_OBJ = This field is required.
+
+OBJ_LINKOBJ_PLACEHOLDER_KR = Select Key result from objective 
+OBJ_LINKOBJ_NO_CHOICE_KR = This field is required.
+
+
