Refactor_Obj_QuickAct_ChangeName

--- a/src/test/resources/dataObjective_QuickActions.properties
+++ b/src/test/resources/dataObjective_QuickActions.properties
@@ -1,5 +1,6 @@
 OBJ_UPDATE_MSG_SUCCESS = Update successful
 OBJ_UPDATE_MSG_ERROR_EXISTED_NAME = Objective name already exists
+OBJ_UPDATE_MSG_ERROR_REQUIRED_NAME = This field is required.
 
 #------------Update Objective title popup----------------
 OBJ_NAME_TITLE = Update Objective title
