ObjDetail_KR_LinkObjectivePopup

--- a/src/test/resources/dataObjDetail_KR_QuickAction.properties
+++ b/src/test/resources/dataObjDetail_KR_QuickAction.properties
@@ -1,4 +1,10 @@
+# ======View Detail Popup=====
 KR_SUCCESS_UPDATE_MSG = Update successful
 KR_DESC_SUCCESS_UPDATE_MSG = Update successfully!
 KR_EMPTY_PROGRESS_MSG = Please enter a number
 DATA_GREATER_THAN_500 = Debitis fuga Ducimus nihil labore duis delectus hic quod fugiat delectus laboris fuga Adipisicing id cupiditate sit impedit.Sunt sunt error sunt qui enim possimus sit est sint in eius aperiam modi sunt. Consequatur placeat nihil aliquid ut et maxime unde in odio ratione amet omnis facere. Voluptatem culpa sint error aliquip velit autem vel blanditiis quia accusantium iure autem et harum nulla culpa dolorem ut aliquid. Quis tempore incididunt vel facere ea nisi commodo et quam id et laboris aut non obcaecati dolorem aliqua Debitis nisi
+
+# ======Link Objective Popup=====
+KR_NO_OBJ_LBL = There are no Objective to choose
+KR_INVALID_GROUP = Test 2
+KR_VALID_GROUP = Chu Anh Tuan
