Edit Gherkin and step define of Link To

--- a/src/test/resources/data_objective_linkto.properties
+++ b/src/test/resources/data_objective_linkto.properties
@@ -1,3 +1,6 @@
 OBJNAME = Trinhnta_testing
 CANCELTITLE = Cancel link request
-KEYRESULT = trinhnta_keyresult
+WEIGHT = 3
+OBJECT_LINKTO = Objective has many KR
+KRNAME = Drink water more
+GROUP = Section 1
