ObjDetail_KR_DeletePopup (#33)

--- a/src/test/resources/dataObjDetail_KR_QuickAction.properties
+++ b/src/test/resources/dataObjDetail_KR_QuickAction.properties
@@ -8,3 +8,6 @@ DATA_GREATER_THAN_500 = Debitis fuga Ducimus nihil labore duis delectus hic quod
 KR_NO_OBJ_LBL = There are no Objective to choose
 KR_INVALID_GROUP = Test 2
 KR_VALID_GROUP = Chu Anh Tuan
+
+# ======Delete Popup=====
+KR_DELETE_MSG_CONFIRM = Are you sure you want to delete
